objects/EntityAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency or office of jurisdiction that the agreement is with.</description>
        <inlineHelpText>The agency or office of jurisdiction that the agreement is with.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Agency__c</referenceTo>
        <relationshipName>EntityAgencyAgreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementType__c</fullName>
        <description>The type of legal agreement.</description>
        <inlineHelpText>The type of legal agreement.</inlineHelpText>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CityText__c</fullName>
        <description>The city on the actual contract</description>
        <inlineHelpText>The city on the actual contract</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>The type of contract or legal agreement.</description>
        <inlineHelpText>The type of contract or legal agreement.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The expiration of the contract or legal agreement term.</description>
        <inlineHelpText>The expiration of the contract or legal agreement term.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntityAgreementEID__c</fullName>
        <description>The Enterprise ID for this Entity Agreement.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Entity Agreement.</inlineHelpText>
        <label>Entity Agreement EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>The client entity with whom the Tax Credit Company is making this contract or legal agreement.</description>
        <inlineHelpText>The client entity with whom the Tax Credit Company is making this contract or legal agreement.</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipName>EntityContracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The effective date of the contract or legal agreement.</description>
        <inlineHelpText>The effective date of the contract or legal agreement.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The state on the actual contract</description>
        <inlineHelpText>The state on the actual contract</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>EntityContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetAddressText__c</fullName>
        <description>The street address on the actual contract</description>
        <inlineHelpText>The street address on the actual contract</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>The zip code on the actual contract</description>
        <inlineHelpText>The zip code on the actual contract</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Entity Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>StreetAddressText__c</columns>
        <columns>CityText__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>